--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100%;
 }
+
+.mat-datepicker-content {
+  height: 320px !important;
+  box-shadow: unset !important;
+  border:unset ;
+}
+
