--- a/src/app/example-header/custom-range-panel.component.scss
+++ b/src/app/example-header/custom-range-panel.component.scss
@@ -1,5 +1,5 @@
 $width: 164px;
-$height:322px;
+$height:268px;
 :host {
   position: absolute;
   width: $width;
@@ -14,11 +14,17 @@ $height:322px;
 }
 .mat-elevation-z3{
   height: $height;
+  border-radius:0px 8px 8px 0px;
+  border: 1px solid rgb(192, 192, 192);
   border-left: unset !important;
-  box-shadow: unset !important;
-  border: 1px solid rgba(0,0,0,.87);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  box-shadow: unset !important;
   
+}
+
+
+.mat-button.mat-primary, .mat-icon-button.mat-primary, .mat-stroked-button.mat-primary {
+  color:unset !important;
 }
