--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<mat-form-field appearance="fill">
+<mat-form-field appearance="fill" (click)="handleDateRangeInputClick()">
   <mat-label>Enter a date range</mat-label>
-  <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+  <mat-date-range-input [formGroup]="range" [rangePicker]="picker" 
+  >
     <input matStartDate formControlName="start" placeholder="Start date" />
     <input matEndDate formControlName="end" placeholder="End date" />
   </mat-date-range-input>
@@ -8,16 +9,7 @@
   <mat-date-range-picker
     #picker
     [calendarHeaderComponent]="ExampleHeaderComponent"
-    [touchUi]="isTouchUIActivated"
   ></mat-date-range-picker>
 </mat-form-field>
-
-<div>
-  <input
-    id="touchUiCheckbox"
-    type="checkbox"
-    (change)="isTouchUIActivated = !isTouchUIActivated"
-  /><label for="touchUiCheckbox">activate touch UI?</label>
-</div>
 
 <p>Selected range: {{ range.value | json }}</p>
