--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,4 @@
   ></mat-date-range-picker>
 </mat-form-field>
 
-<p>Selected range: {{ range.value | json }}</p>
+<p>Selected range: {{ parseRange() | json }}</p>
