--- a/src/app/example-header/custom-range-panel.component.html
+++ b/src/app/example-header/custom-range-panel.component.html
@@ -4,6 +4,7 @@
     mat-button
     color="primary"
     (click)="selectRange(item)"
+    [ngClass]="{'custom-range-btn': item === 'Custom range'}"
   >
     {{ item }}
   </button>
