--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
+
 :host {
   display: flex;
   flex-direction: column;
@@ -6,10 +7,23 @@
   height: 100%;
 }
 
-.mat-datepicker-content {
+.mat-calendar-content{
   height: 320px !important;
   box-shadow: unset !important;
   border:unset ;
 }
 
+::ng-deep .mat-calendar {
+  max-height: 300.5px;
+  box-shadow: unset !important;
+  
+}
 
+::ng-deep .mat-datepicker-content {
+  box-shadow: none !important;
+  border: 1px solid rgb(192, 192, 192);
+  border-right:unset;
+  border-radius:unset !important;
+  
+  
+}
