--- a/src/app/example-header/custom-range-panel.component.scss
+++ b/src/app/example-header/custom-range-panel.component.scss
@@ -2,6 +2,7 @@ $width: 164px;
 $height:268px;
 :host {
   position: absolute;
+  top:0px;
   width: $width;
   right: -$width; // to render it on the right side, use "right: -$width" instead
 }
@@ -14,8 +15,8 @@ $height:268px;
 }
 .mat-elevation-z3{
   height: $height;
-  border-radius:0px 8px 8px 0px;
   border: 1px solid rgb(192, 192, 192);
+  border-radius: unset !important;
   border-left: unset !important;
   display: flex;
   flex-direction: column;
