--- a/src/app/example-header/custom-range-panel.component.html
+++ b/src/app/example-header/custom-range-panel.component.html
@@ -5,6 +5,7 @@
     color="primary"
     (click)="selectRange(item)"
     [ngClass]="{'custom-range-btn': item === 'Custom range'}"
+    [id]="replaceSpacesWithHyphens(item)"
   >
     {{ item }}
   </button>
