--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
   <mat-label>Enter a date range</mat-label>
   <mat-date-range-input [formGroup]="range" [rangePicker]="picker" 
   >
-    <input matStartDate formControlName="start" placeholder="Start date" />
+    <input matStartDate formControlName="start" placeholder="Start date"/>
     <input matEndDate formControlName="end" placeholder="End date" />
   </mat-date-range-input>
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-date-range-picker
+  <mat-date-range-picker (dateChange)="calendarHandler($event)"
     #picker
     [calendarHeaderComponent]="ExampleHeaderComponent"
   ></mat-date-range-picker>
