--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,3 +27,11 @@
   
   
 }
+
+::ng-deep .mat-date-range-input-separator{
+  display: none;
+}
+
+::ng-deep .mat-date-range-input-end-wrapper{
+  display: none;
+}
